# opinionated-python-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cspell.json  mkdocs.yaml  poetry.toml  pyproject.toml  pyrightconfig.json  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/api/: reference.md
src/opinionated_python/: main.py
tests/: test_main.py
